# pyschedcl-concurrent

./: LICENSE  README.md
pyschedcl/: .gitignore  constant_pyschedcl.py  dump.json  pyschedcl.py  run_dheft.sh  run_transformer.sh  tags
pyschedcl/TC/: TC_visualisation.ipynb
pyschedcl/database/: extract_sample_features.py  extract_sample_json.py  feature_tests.py  info_properties.py  info_tests.py  times4096.txt
pyschedcl/info/: BackpropWeightsScratchLarge.json  BackpropWeightsScratchLarge.txt  BackpropWeightsScratchLarge_backup.json  FFC.json  FFC_dinput.json  FFC_dweight.json  FFC_dweight_backup.json  FFC_thread_coarsening.txt  GEMM11 (copy).cl  GEMM3.json  forward4.json  (+20 more)
pyschedcl/passes/feature_pass/: CMakeLists.txt  README.md
pyschedcl/passes/feature_pass/tests/: CMakeLists.txt
pyschedcl/passes/feature_pass/thrud/: CMakeLists.txt
pyschedcl/passes/feature_pass/thrud/include/thrud/: BasicBlockFeatures.h  FeatureCollector.h  FeatureExtraction.h  NDRange.h  Utils.h
pyschedcl/passes/feature_pass/thrud/lib/: .clang_complete  BasicBlockFeatures.cpp  CMakeLists.txt  FeatureCollector.cpp  FeatureExtraction.cpp  LoopFeatureExtraction.cpp  MLPComputation.cpp  NDRange.cpp  Utils.cpp  tags  temp.stats
pyschedcl/passes/feature_pass/thrud/tools/scripts/: FFC_IR.txt  FFC_feat.stats  LoopFeat_VectorAdd.stats  LoopFeat_mm.stats  LoopFeat_scan.stats  VectorAdd_feat.stats  VectorAdd_features.stats  dump_feat.sh  dump_ir.sh  extract_feat.sh  extract_feat_loops.sh  feat.stats  features_mm.stats  mm2_kernel1_feat.stats  tc.sh  test.bc  test.sh  test.stats  testIR_feat.stats
(+18245 files in other folders)
